<?xml version="1.0"?>
<package format="2">
  <name>vrep_ros_interface</name>
  <description>V-REP plugin for ROS interface</description>
  <maintainer email="marc@coppeliarobotics.com">Marc</maintainer>
  <version>3.3.0</version>
  <author>Federico Ferri</author>
  <license>GPLv3</license>
  <url>http://www.coppeliarobotics.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-rospkg</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>vrep_stubs_gen</build_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rosconsole</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>brics_actuator</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
</package>